solved z-indexing

--- a/index.css
+++ b/index.css
@@ -202,6 +202,7 @@
         max-width: 599px;
         position: absolute;
         opacity: 0.7;
+        z-index: -1;
     }
     .about-us .right object{
         width: 100%;
